--- a/app/assets/stylesheets/css/components/grid.css
+++ b/app/assets/stylesheets/css/components/grid.css
@@ -2,7 +2,7 @@
 /* BEM Methodology: .grid-card (block), .grid-card__element (elements) */
 
 .grid-wrapper {
-  @apply w-full grid grid-cols-1 xs:grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-6 gap-4 mt-8;
+  @apply w-full grid grid-cols-1 xs:grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-6 gap-4;
 }
 
 .grid-card {
